--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
     <section id="home" class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Velkommen til Esben og Damgaard Duo</h1>
+                <h1>Velkommen til Nicolai og Damgaard Duo</h1>
                 <p>Danmark er åbnet op, kunderne vil igen holde fester og vi er atter ude og spille. Super skønt! Men datoerne forsvinder hurtigt i kalenderen, så kontakt os inden det er for sent!</p>
                 <a href="#services" class="btn">Se vores tilbud</a>
             </div>
